fix: Resolve issue with hero on small screens
This commit fixes an issue where the 'hero' image was showing on small
screens; this hides it and centers the about section.

--- a/styles.css
+++ b/styles.css
@@ -9,6 +9,7 @@ body {
 }
 
 section {
+    min-height: 100vh;
     width: 100%;
     flex-direction: column;
 }
@@ -41,6 +42,7 @@ footer {
 /* Structure classes */
 .about {
     align-items: center;
+    margin: auto;
 }
 
 .about-buttons {
@@ -74,6 +76,10 @@ footer {
 
 .flex-wrap {
     flex-wrap: wrap;
+}
+
+.hero-image {
+    display: none;
 }
 
 .hidden {
@@ -226,7 +232,6 @@ footer {
         flex-basis: calc((100% - 24px - 4rem) / 2);
         /* 40px = 1 gap (20px) + 4 borders (1px) + 4 paddings (1rem) */
     }
-
 }
 
 @media screen and (min-width: 1000px) {
@@ -236,7 +241,6 @@ footer {
 
     section {
         flex-direction: row;
-        min-height: 100vh;
     }
 
     img {
@@ -254,6 +258,10 @@ footer {
 
     .about {
         align-items: start;
+    }
+
+    .hero-image {
+        display: flex;
     }
 }
 
